--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^20.19.31",
+    "@types/uuid": "^9.0.8",
     "assemblyai": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -18,15 +23,10 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.20.1",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.25",
-    "@types/multer": "^1.4.13",
-    "@types/node": "^20.19.31",
-    "@types/uuid": "^9.0.8",
-    "tsx": "^4.20.6",
-    "typescript": "^5.3.3"
+    "tsx": "^4.20.6"
   }
 }
